--- a/logins/login01/estilos/style.css
+++ b/logins/login01/estilos/style.css
@@ -1,14 +1,47 @@
 *{
     margin:0;
 }
-#login{
-    text-align: right;
-    padding-right: 50px;
-    
-}
+
 header{
 
     background-color: rgb(3, 3, 146);
     padding: 25px;
     box-shadow: rgba(0, 0, 0, 0.37) 0px 2px 7px;
+}
+#login{
+    text-align: right;
+    padding-right: 50px;
+    color: white;
+    font-weight: 400;
+    
+    
+}
+#login input[type="email"],input[type="password"]{
+    border-radius: 5px;
+    margin-right: 10px;
+    margin-left: 5px;
+    line-height: 20px;
+    box-shadow: rgba(0, 0, 0, 0.199) 0px 2px 7px;
+}
+input[type="button"]{
+    border-radius: 5px;
+    margin-right: 10px;
+    margin-left: 5px;
+    line-height: 20px;
+    
+}
+input[type="button"]:hover{
+    background-color:rgb(169, 169, 169);
+    box-shadow: inset rgba(0, 0, 0, 0.308) 0px 3px 10px;
+}
+#box{
+    background-color: rgb(0, 57, 104);
+    border-radius: 8px;
+    width: 500px;
+    height: 600px;    
+    padding: 30px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 60px;
+    
 }
