--- a/logins/login01/estilos/style.css
+++ b/logins/login01/estilos/style.css
@@ -8,9 +8,13 @@ body{
 
 header{
 
-    background-color: #0532A8;
+    background-color: #4D4D4D;
     padding: 25px;
     box-shadow: rgba(0, 0, 0, 0.37) 0px 2px 7px;
+}
+main{
+    background-image: linear-gradient(to right,#808080,#CCCCCC);
+    padding: 1px;
 }
 #login{
     text-align: right;
@@ -44,8 +48,8 @@ input[type="button"]:hover{
 }
 
 #cadastro{
-    color: white;
-    background-color: #5C3EA8;
+    color: black;
+    background-color: #cccccc;
     border-radius: 8px;
     width: 400px;
     height: 450px;    
@@ -60,7 +64,7 @@ input[type="button"]:hover{
 #cadastro h1{
     border-radius: 8px 8px 0px 0px;
     text-align: center;
-    background-color: #0532A8;
+    background-color: #4D4D4D;
     color: white;
     margin: -30px;
     padding: 30px;
@@ -97,4 +101,5 @@ footer{
     background-color: black;
     color: white;
     padding: 20px;
+    text-align: center;
 }
