--- a/logins/login01/estilos/style.css
+++ b/logins/login01/estilos/style.css
@@ -73,6 +73,7 @@ input[type="button"]:hover{
 }
 
 #cadastro input{
+    text-align: center;
     border:none;
     margin: auto;
     margin-top: 20px;
@@ -90,11 +91,12 @@ input[type="button"]:hover{
     line-height: 20px;
     padding: 10px 20px;
     border:none;
-    margin: auto;
+    margin-left: 135px;
     margin-top: 20px;
     
 }
 #cadastro input[type="button"]:hover{
+    
     background-color:#5C059E;
 }
 footer{
