--- a/logins/login01/estilos/style.css
+++ b/logins/login01/estilos/style.css
@@ -20,6 +20,7 @@ main{
 
 }
 #login{
+   
     text-align: right;
     padding-right: 50px;
     color: white;
@@ -29,6 +30,7 @@ main{
 }
 #login input[type="email"],input[type="password"]{
     border-radius: 5px;
+    
     margin-right: 10px;
     margin-left: 5px;
     line-height: 20px;
@@ -37,6 +39,7 @@ main{
 #login input[type="button"]{
     border:none;
     border-radius: 5px;
+    margin-top: 10px;
     margin-right: 10px;
     margin-left: 5px;
     line-height: 20px;
