--- a/logins/login01/estilos/style.css
+++ b/logins/login01/estilos/style.css
@@ -4,7 +4,7 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
-    size: 97%vh;
+    
 }
 
 header{
@@ -14,12 +14,12 @@ header{
     box-shadow: rgba(0, 0, 0, 0.37) 0px 2px 7px;
 }
 main{
-    size: 97%vh;
     position: relative;
+    height: 81vh;
     background: #CCCCCC url('../fundo.jpg') no-repeat center center fixed;
     background-size: cover;
     padding: 1px;
-
+    
 }
 #login{
    
@@ -58,7 +58,7 @@ input[type="button"]:hover{
 #cadastro{
     position: absolute;
     left: 50%;
-    top: 50%;    
+    top: 50%;
     transform: translate(-50%,-50%);
     color: black;
     background-color: #cccccc;
@@ -67,8 +67,7 @@ input[type="button"]:hover{
     height: 450px;    
     padding: 30px;
     margin: auto;
-    margin-top: 50px;
-    margin-bottom: 88px;
+    
     box-shadow: rgba(0, 0, 0, 0.377) 5px 5px 10px 1px;
     
     
@@ -103,8 +102,6 @@ input[type="button"]:hover{
     line-height: 20px;
     padding: 10px 20px;
     border:none;
-    margin-left: 135px;
-    margin-top: 20px;
     
 }
 #cadastro input[type="button"]:hover{
@@ -114,6 +111,6 @@ input[type="button"]:hover{
 footer{
     background-color: black;
     color: white;
-    padding: 20px;
+    padding: 21.5px;
     text-align: center;
 }
