--- a/logins/login02/estilos/style.css
+++ b/logins/login02/estilos/style.css
@@ -1,24 +1,29 @@
 body{
+    height: 97vh;
     background-color: thistle;
+    position: relative;
 }
 main{
+    position: absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
     width: 400px;
     height: 450px;
     background-color: white;
     padding: 10px;
     border-radius: 10px;
 }
-main input[type="text"],input[type="email"],input[type="password"]{
-    margin: auto;
+input[type="text"],input[type="email"],input[type="password"]{
+    
     display: block;
+    margin: auto;
     line-height: 25px;
     border-radius: 25px;
     border: rgb(26, 26, 202) solid 2px;
     margin-top: 20px;
     margin-left: 20px;
-    transition:.5s;
-
-}
-main input[type="text"],input[type="email"],input[type="password"]:focus{
+    width: 250px;
     
+
 }
