--- a/projeto-cordel/estilos/style.css
+++ b/projeto-cordel/estilos/style.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root{
+    --titulo:'Roboto', sans-serif;
+    --texto:'Fuzzy Bubbles','cursive';
+}
 *{
     margin: 0;
     padding: o;
@@ -6,6 +14,7 @@
 }
 html,body{
     min-height: 100vh;
+    font-family: var(--titulo)
 }
 header{
     background-color: black;
@@ -16,6 +25,7 @@ header{
 header >h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 5vw;
 }
 header >p{
     padding-bottom: 50px;
@@ -29,14 +39,19 @@ header a:hover{
     text-decoration: underline;
 }
 section{
+    font-family: var(--texto);
+    font-size: 3.5vw;
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
 }
 .imagem p{
+    border-radius: 10px;
+    display: inline-block;
+    padding: 7px;
     background-color: rgba(0, 0, 0, 0.438);
-    width: 350px;
+    
 
 }
 
