--- a/projeto-cordel/estilos/style.css
+++ b/projeto-cordel/estilos/style.css
@@ -40,13 +40,34 @@ header a:hover{
 }
 section{
     font-family: var(--texto);
-    font-size: 3.5vw;
+    font-size: 2.5vw;
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
 }
+.imagem{
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.534);
+    background-size: cover;
+    background-attachment: fixed;
+}
+section#img01{
+    background-image: url("../imagens/background001.jpg");
+    background-position: right center;
+    
+    
+}
+section#img02{
+    background-image: url("../imagens/background002.jpg");
+    background-position: right center;
+    
+}
+section > p{
+    padding-bottom: 2em;
+}
 .imagem p{
+    color: white;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.514);
     border-radius: 10px;
     display: inline-block;
     padding: 7px;
