--- a/projeto-cordel/estilos/style.css
+++ b/projeto-cordel/estilos/style.css
@@ -53,7 +53,7 @@ section{
 }
 section#img01{
     background-image: url("../imagens/background001.jpg");
-    background-position: center right;
+    background-position: center center;
     
     
 }
