--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -1,3 +1,9 @@
+
+@font-face {
+    font-family: font-numero;
+    src: url(!CRASS\ ROOTS\ OFL.ttf);
+}
+    
 #calculadora{
     margin: auto;
     background-color: dimgray;
@@ -17,6 +23,7 @@
     color: white;
     font-size: 60px;
     text-align: right;
+    font-family: font-numero;
     
 }
 
