--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -18,7 +18,8 @@
     margin:15px;
     border-radius: 10px;
     color: white;
-    font-size: 60px;
+    font-size: 80px;
+    font-weight: bolder;
     text-align: right;
     font-family: 'cursive';
     
