--- a/logins/login01/estilos/style.css
+++ b/logins/login01/estilos/style.css
@@ -30,6 +30,9 @@ main{
     
     
 }
+#login > div{
+    display: inline-block;
+}
 #login input[type="email"],input[type="password"]{
     border-radius: 5px;
     
@@ -121,4 +124,46 @@ footer{
     color: white;
     padding: 21.5px;
     text-align: center;
+}
+@media(max-width:700px) and (min-height:620px) {
+    #login > div{
+        display: block;
+    }
+    #cadastro{
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        color: black;
+        background-color: #cccccc;
+        border-radius: 8px;
+        width: 300px;
+        height: 400px;
+        
+        padding: 20px;
+        margin: auto;
+        box-shadow: rgba(0, 0, 0, 0.377) 5px 5px 10px 1px;
+    }
+    #cadastro h1{
+        border-radius: 8px 8px 0px 0px;
+        text-align: center;
+        background-color: #4D4D4D;
+        color: white;
+        margin: -20px;
+        padding: 20px;
+        margin-bottom: 20px;
+        box-shadow: rgba(0, 0, 0, 0.199) 0px 2px 7px;
+    }
+    #cadastro input{
+        text-align: center;
+        width: 220px;    
+        display: block;
+        border:none;
+        margin: auto;
+        margin-top: 6px;
+        border-radius: 5px;    
+        line-height: 30px;
+        box-shadow: rgba(0, 0, 0, 0.199) 0px 2px 7px;
+        
+    }
 }
