--- a/meusetup/style.css
+++ b/meusetup/style.css
@@ -17,6 +17,7 @@ header{
     font-variant:small-caps;
     box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.377);
     font-family: var(--titulo);
+    z-index: 100;
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
