--- a/csgo/style.css
+++ b/csgo/style.css
@@ -80,6 +80,10 @@ main >h2{
     border-bottom: 0.5px solid black;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.404);
 }
+article{
+    border-bottom: 1px solid #2B3B43;
+    margin-bottom: 30px;
+}
 article ul{
     list-style: none;
 }
@@ -90,6 +94,10 @@ article>h3{
 div img{
     width: 400px;
     border-radius: 15px;
+}
+.img2{
+    width: 250px;
+    
 }
 article div{
     text-align: center;
