--- a/csgopre/style.css
+++ b/csgopre/style.css
@@ -54,7 +54,7 @@ body{
 
 main{
     margin: auto;
-    max-width: 800px;
+    max-width: 850px;
     background-color: #151516e0;
     border-radius: 15px;
     margin-top:30px;
@@ -157,8 +157,11 @@ article> ul{
     header>a{
         display: none;
     }
+    
+    
     #update a{
         display: block;
+        margin: 10px;
     }
     main{
         grid-template-columns: 1fr;
@@ -167,6 +170,10 @@ article> ul{
         "players"
         "update"
         "noticia";
+    }
+    #update{
+        display: flex;
+        overflow-x: auto;
     }
     
 
@@ -179,6 +186,7 @@ article> ul{
     #cont img{
         width: 250px;
     }
+    
     
     
     
