--- a/csgo/style.css
+++ b/csgo/style.css
@@ -3,30 +3,27 @@
     margin: 0;
     padding: 0;
 }
+
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #18202B;
     padding: 16px;
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.404);
-    
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.404);    
 }
 header>nav{
     display: inline-block;    
 }
-header>a{
-    
+header>a{    
     display: inline-block;
     color: white;
     font-size: 30px;
     width: 100px; 
-    text-decoration: none;
-    
+    text-decoration: none;    
 }
 header>a:hover{      
-    color: #F3A11D;
-    
+    color: #F3A11D;    
 }
 nav>#pesquisa{
     background-color:#2B3B43;
@@ -38,14 +35,10 @@ nav>#pesquisa{
 nav>a{
     color: #F3A11D;
     text-transform: uppercase;
-    text-decoration: none;
-   
-    padding: 5px 10px;
-   
-    
+    text-decoration: none;   
+    padding: 5px 10px;    
 }
-nav>a:hover{
-   
+nav>a:hover{   
     text-decoration: underline;
     background-color: #2B3B43;
     border-radius: 15px;
@@ -56,21 +49,28 @@ body{
     background-image: url("imagens/fundo.png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: fixed;    
 }
 
 main{
     margin: auto;
-    max-width: 800px;
+    max-width: 850px;
     background-color: #151516e0;
     border-radius: 15px;
     margin-top:30px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.404);
     color: white;
     padding: 30px;
-    
+    display: grid;
+    grid-template-columns: 1fr 325px;
+    grid-gap: 10px;
+    grid-template-areas:
+    "titulo titulo"
+    "noticia players"
+    "noticia update"
+    "noticia .";    
 }
-main >h2{
+main>section>h2{
     margin: -30px -30px 0 -30px;
     background-color: #151516af;
     color: #F3A11D;
@@ -81,9 +81,11 @@ main >h2{
     border-bottom: 0.5px solid black;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.404);
 }
+
 article{
     border-bottom: 1px solid #2B3B43;
     margin-bottom: 30px;
+   
 }
 article ul{
     list-style: none;
@@ -107,32 +109,89 @@ article div{
     
 }
 article>p{
+    
     margin-top: 5px;
     margin-bottom: 5px;
+}
+article p,li {
+    font-weight: lighter;
+    font-size: 14.4px;
 }
 article> ul{
     margin-top: 15px;
     margin-bottom: 15px;
 }
+#noticia{
+    grid-area: noticia;
+}
+#update{
+    grid-area: update;
+    text-align: center;
+}
+#update a img{
+    border-radius: 10px;
+}
+#titulo{
+    grid-area: titulo;
+}
+
+#players{
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.801);   
+    background-image: url("imagens/fundo-players.jpg");
+    background-position: center center;
+    background-size: cover;
+    grid-area: players;
+    margin: auto;
+    border: 2px solid #2B3B43;
+    padding: 5px;
+    border-radius: 15px;
+    width: 250px;
+    height: 50px;
+    text-align: center;
+}
+
 @media (max-width:800px){
-    div img{
+    .cont img{
         width: 350px;
     }
     header>a{
         display: none;
     }
-    nav>#pesquisa{
-        display: none;
+    
+    
+    #update a{
+        display: block;
+        margin: 10px;
     }
+    main{
+        grid-template-columns: 1fr;
+       grid-template-areas:
+        "titulo"
+        "players"
+        "update"
+        "noticia";
+    }
+    #update{
+        display: flex;
+        overflow-x: auto;
+    }
+    
 
 }
 @media (max-width:600px){
-    div img{
+    nav>#pesquisa{
+        display: none;
+    }
+    #update a img{
         width: 250px;
     }
-    header>a{
-        font-size: 20px;
+    .cont img{
+       
+        width: 250px;
     }
+    
+    
+    
     
 
 }
