--- a/myperfil/style.css
+++ b/myperfil/style.css
@@ -8,7 +8,7 @@
     --cor2:#d1cbcb;
 }
 .darkMode{
-    background-color: black;
+    background-color: #0B141E;
     color: white;
 }
 header{
@@ -48,7 +48,10 @@ main{
 #redes>a>img{
     margin: 7px 2px;
     width: 20px;
-
+    filter: brightness(80%);
+}
+#redes>a>img:hover{
+    filter: brightness(120%);
 }
 #btn input{
     color: white;
@@ -57,6 +60,9 @@ main{
     border: none;
     background-color: var(--cor1);
     margin-top: 10px;
+}
+#btn input:hover{
+    background-color: #0088ff;
 }
 #habilidades{
     border-radius: 5px;
@@ -80,6 +86,9 @@ main{
 #habilidades span:nth-child(2n){
     background-color: var(--cor2);
 
+}
+#habilidades span:nth-child(2n):hover{
+    background-color:white;
 }
 #projetos{
     max-width: 600px;
