--- a/FarCry4/style.css
+++ b/FarCry4/style.css
@@ -9,6 +9,7 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -49,7 +50,7 @@ header>ul>li>a:hover{
 main{
     margin: 0 auto;    
     max-width: 960px;
-    height: calc(100vh-111px);
+
         
 }
 
