--- a/myperfil/style.css
+++ b/myperfil/style.css
@@ -146,7 +146,9 @@ main{
    font-weight: bold;
    width: 100%;
 }
-
+#projetos div:hover{
+    border:2px solid #0088ff;
+}
 @media(max-width:450px){
 
     #projetos div{
