--- a/myperfil/style.css
+++ b/myperfil/style.css
@@ -34,8 +34,10 @@ body{
 }
 
 main{
-    max-width: 600px;    
-    margin: 0 auto;   
+    max-width: 600px; 
+    display: grid;    
+    align-self: center;
+    
 }
 #foto{
     display: flex;
@@ -96,7 +98,7 @@ main{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 15px;
     box-shadow: 1px 2px 7px 1px rgba(0, 0, 0, 0.479);
 }
 #habilidades span{
