--- a/myperfil/style.css
+++ b/myperfil/style.css
@@ -24,12 +24,14 @@ header{
     display: flex;
     justify-content: end;    
     padding: 10px;
+    
 }
 body{
     font-family: 'Roboto', sans-serif;    
     display: flex;
     flex-direction: column;
     align-content: space-between;
+    transition: 0.3s;
         
 }
 
