--- a/logins/login01/style.css
+++ b/logins/login01/style.css
@@ -12,8 +12,8 @@ body{
     font-family: sans-serif;
 }
 aside{
-    width: 50%;
-    height: 100vh;
+    width: 50%;    
+    min-height:100vh;
     display: grid;
     place-content: center;
     background-color: #000000b3;
@@ -21,7 +21,7 @@ aside{
 }
 main{
     width: 50%;
-    height: 100vh;
+    
     display: grid;
     place-content: center;
 }    
@@ -29,7 +29,7 @@ main h1{
     color: #FFF;
     display: flex;
     justify-content: center;
-    margin-bottom: 40px;   
+    margin-bottom: 30px;   
     display: none;    
 }    
 
