--- a/myperfil/style.css
+++ b/myperfil/style.css
@@ -56,6 +56,9 @@ main{
     border-radius: 50%;
 }
 #foto img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     max-width: 100%;
     max-height:100%;
     border-radius: 50%;
